Refactor : stream 불필요한 구문 삭제